# fastapidozero

./: .gitignore  database.db  pyproject.toml  requirements.txt
fast_zero/: app.py
migrations/versions/: 82b8af23ffa8_inclusão_do_campo_update_at_na_model_.py  cddf451bdfd7_create_users_table.py
scripts/: pega_ip.py
tests/: test_app.py
