[project]
name = "todo"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Marco André Mendes", email = "marcoandre@gmail.com" }]
dependencies = ["fastapi[standard]>=0.115.11"]
requires-python = ">=3.13,<4.0"
readme = "README.md"
license = { text = "MIT" }

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-cov>=6.0.0", "ruff>=0.11.2"]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.pdm]
distribution = false

[tool.pdm.scripts]
lint = "ruff check"
pre_format = "ruff check --fix"
format = "ruff format"
dev2 = "fastapi dev fast_zero/app.py --host 0.0.0.0 --port 19003"
dev = "fastapi dev fast_zero/app.py"
pre_test = "pdm run lint"
test = "pdm run pytest -s -x --cov=fast_zero"
post_test = "pdm run coverage html"
